--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
